fix: style issues with badge and wrapping

--- a/src/components/Payroll/PayrollStatusBadges/PayrollStatusBadges.module.scss
+++ b/src/components/Payroll/PayrollStatusBadges/PayrollStatusBadges.module.scss
@@ -1,15 +1,11 @@
 .statusCell {
-  flex-wrap: wrap;
   max-width: toRem(220);
   min-width: toRem(140);
+}
 
-  > * {
-    &:first-child {
-      margin-left: 0;
-    }
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
+.badges {
+  display: flex;
+  flex-wrap: wrap;
+  gap: toRem(8);
+  align-items: flex-start;
 }
